name:                StepItUp
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/StepItUp#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Mullen
maintainer:          malaguy@gmail.com
copyright:           2015 Matthew Mullen
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Game.Step.Song
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5 && < 0.6
  default-language:    Haskell2010

executable StepItUp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , StepItUp
  default-language:    Haskell2010

test-suite StepItUp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , StepItUp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/StepItUp
